--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
-    "@polkadot/api": "^5.8.3",
+    "@polkadot/api": "^6.2.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "file-saver": "^2.0.5",
+    "ipfs-core": "^0.11.1",
     "mime-types": "^2.1.32",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
