--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.1.10",
     "file-saver": "^2.0.5",
     "ipfs-core": "^0.11.1",
+    "ipfs-http-client": "^53.0.1",
     "mime-types": "^2.1.32",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
