--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ipfs-core": "^0.11.1",
     "ipfs-http-client": "^53.0.1",
     "mime-types": "^2.1.32",
+    "public-ip": "^4.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
