--- a/package.json
+++ b/package.json
@@ -10,21 +10,21 @@
     "@mui/core": "^5.0.0-alpha.54",
     "@mui/icons-material": "^5.1.0",
     "@mui/material": "^5.1.0",
-    "@polkadot/api": "^6.2.1",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@mui/styles": "^5.5.1",
+    "@polkadot/api": "^7.13.1",
+    "@polkadot/api-contract": "^7.5.1",
+    "@testing-library/jest-dom": "^5.16.3",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^13.5.0",
     "file-saver": "^2.0.5",
     "ipfs-core": "^0.11.1",
     "ipfs-http-client": "^53.0.1",
-    "mime-types": "^2.1.32",
     "public-ip": "^4.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3",
-    "react-spinners": "^0.11.0",
-    "web-vitals": "^1.0.1"
+    "react-router-dom": "^6.2.2",
+    "react-scripts": "5.0.0",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
