--- a/package.json
+++ b/package.json
@@ -3,52 +3,59 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-      "@emotion/react": "^11.5.0",
-      "@emotion/styled": "^11.3.0",
-      "@material-ui/core": "^4.12.3",
-      "@material-ui/icons": "^4.11.2",
-      "@mui/core": "^5.0.0-alpha.54",
-      "@mui/icons-material": "^5.1.0",
-      "@mui/material": "^5.1.0",
-      "@mui/styles": "^5.5.1",
-      "@polkadot/api": "^8.14.1",
-      "@polkadot/api-contract": "^8.14.1",
-      "@testing-library/jest-dom": "^5.16.3",
-      "@testing-library/react": "^12.1.4",
-      "@testing-library/user-event": "^13.5.0",
-      "file-saver": "^2.0.5",
-      "ipfs-core": "^0.11.1",
-      "ipfs-http-client": "^53.0.1",
-      "public-ip": "^4.0.4",
-      "react": "^17.0.2",
-      "react-dom": "^17.0.2",
-      "react-router-dom": "^6.2.2",
-      "react-scripts": "5.0.0",
-      "web-vitals": "^2.1.4"
+        "@emotion/react": "^11.5.0",
+        "@emotion/styled": "^11.3.0",
+        "@material-ui/core": "^4.12.3",
+        "@material-ui/icons": "^4.11.2",
+        "@mui/core": "^5.0.0-alpha.54",
+        "@mui/icons-material": "^5.1.0",
+        "@mui/material": "^5.1.0",
+        "@mui/styles": "^5.5.1",
+        "@polkadot/api": "^8.14.1",
+        "@polkadot/api-contract": "^8.14.1",
+        "@testing-library/jest-dom": "^5.16.3",
+        "@testing-library/react": "^12.1.4",
+        "@testing-library/user-event": "^13.5.0",
+        "file-saver": "^2.0.5",
+        "ipfs-core": "^0.10.5",
+        "ipfs-http-client": "^53.0.1",
+        "level": "^7.0.1",
+        "levelup": "^5.1.1",
+        "os": "^0.1.2",
+        "public-ip": "^4.0.4",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-router-dom": "^6.2.2",
+        "react-scripts": "5.0.0",
+        "tweetnacl": "^1.0.3",
+        "util": "^0.12.5",
+        "web-vitals": "^2.1.4"
     },
     "scripts": {
-      "start": "react-scripts start",
-      "build": "react-scripts build",
-      "test": "react-scripts test",
-      "eject": "react-scripts eject"
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
     },
     "eslintConfig": {
-      "extends": [
-        "react-app",
-        "react-app/jest"
-      ]
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
     },
     "browserslist": {
-      "production": [
-        ">0.2%",
-        "not dead",
-        "not op_mini all"
-      ],
-      "development": [
-        "last 1 chrome version",
-        "last 1 firefox version",
-        "last 1 safari version"
-      ]
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "local-ip-url": "^1.0.3"
     }
-  }
-  
+}
