--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "dependencies": {
         "@emotion/react": "^11.5.0",
         "@emotion/styled": "^11.3.0",
+        "@fortawesome/fontawesome-svg-core": "^6.2.0",
+        "@fortawesome/free-solid-svg-icons": "^6.2.0",
+        "@fortawesome/react-fontawesome": "^0.2.0",
         "@material-ui/core": "^4.12.3",
         "@material-ui/icons": "^4.11.2",
         "@mui/core": "^5.0.0-alpha.54",
@@ -13,10 +16,14 @@
         "@mui/styles": "^5.5.1",
         "@polkadot/api": "^8.14.1",
         "@polkadot/api-contract": "^8.14.1",
+        "@polkadot/rpc-provider": "^9.7.1",
         "@testing-library/jest-dom": "^5.16.3",
         "@testing-library/react": "^12.1.4",
         "@testing-library/user-event": "^13.5.0",
+        "crypto": "^1.0.1",
+        "crypto-browserify": "^3.12.0",
         "file-saver": "^2.0.5",
+        "font-awesome": "^4.7.0",
         "ipfs-core": "^0.10.5",
         "ipfs-http-client": "^53.0.1",
         "level": "^7.0.1",
@@ -29,7 +36,8 @@
         "react-scripts": "5.0.0",
         "tweetnacl": "^1.0.3",
         "util": "^0.12.5",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "x25519-key-pair": "^3.1.0"
     },
     "scripts": {
         "start": "react-scripts start",
