--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
     "name": "iris",
+    "homepage": "https://iris.idealabs.network",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
         "@emotion/react": "^11.5.0",
         "@emotion/styled": "^11.3.0",
         "@fortawesome/fontawesome-svg-core": "^6.2.0",
+        "@fortawesome/free-brands-svg-icons": "^6.2.1",
         "@fortawesome/free-solid-svg-icons": "^6.2.0",
         "@fortawesome/react-fontawesome": "^0.2.0",
         "@material-ui/core": "^4.12.3",
@@ -16,7 +18,7 @@
         "@mui/styles": "^5.5.1",
         "@polkadot/api": "^8.14.1",
         "@polkadot/api-contract": "^8.14.1",
-        "@polkadot/rpc-provider": "^9.7.1",
+        "@polkadot/rpc-provider": "^9.9.1",
         "@testing-library/jest-dom": "^5.16.3",
         "@testing-library/react": "^12.1.4",
         "@testing-library/user-event": "^13.5.0",
