--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
         ]
     },
     "devDependencies": {
+        "eslint": "^8.30.0",
+        "eslint-plugin-react": "^7.31.11",
         "local-ip-url": "^1.0.3"
     }
 }
